# agv_car

./: README.md
check_odometry/: CMakeLists.txt  package.xml
check_odometry/launch/: check_odom.launch
check_odometry/src/: check_odom.py
movement/: .gitignore.swp  CMakeLists.txt
movement/launch/: move_client.launch  move_server.launch
movement/src/: move_client.cpp  move_server.cpp
simple_controller/: package.xml
simple_controller/src/: simple_controller.cpp
smartcar/: CMakeLists.txt  package.xml
smartcar/launch/: smartcar.launch
smartcar/scripts/: lane_detection.py  obstacle_detection.py  rplidar_detection.py  velocity_decision.py
test/: CMakeLists.txt  package.xml
test/src/: main.cpp
turn_on_wheeltec_robot/launch/: mapping.launch  navigation.launch  show_map.launch  turn_on_wheeltec_robot.launch
turn_on_wheeltec_robot/launch/include/: amcl_omni.launch  rtabmap_nav.launch  tel_local_planner.launch
turn_on_wheeltec_robot/map/: 1920work.pgm  1920work.yaml  demo.pgm  demo.yaml
turn_on_wheeltec_robot/param_common/: base_global_planner_param.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
turn_on_wheeltec_robot/param_mini_mec/: costmap_common_params.yaml
wheeltec_robot_rc/scripts/: turtlebot_teleop_key
